use confirm to replace prompt

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+          <button id="regenerate" class="btn">Regenerate Password</button> 
+          <!--As user might not like the password generated, this button is added to regenerate the pwd with the criterias set by the user.-->
         </div>
       </div>
     </div>
